--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "description": "socket.io chat app",
     "dependencies": {
         "express": "^4.17.1",
-        "socket.io": "^4.7.5"
+        "express-winston": "^4.2.0",
+        "socket.io": "^4.7.5",
+        "winston": "^3.14.2",
+        "winston-daily-rotate-file": "^5.0.0"
     }
 }
